plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.example.lab1'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.0'
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Uncomment if needed
    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0' // Provided scope for servlet API
    implementation 'org.thymeleaf:thymeleaf-spring6:3.1.2.RELEASE'

    // Testing dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.springfox:springfox-swagger2:3.0.0'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // MapStruct annotation processor
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['-parameters']
}



test {
    useJUnitPlatform()
}